Fix layout for blog and align sidebar with the header

--- a/source/stylesheets/blog.sass
+++ b/source/stylesheets/blog.sass
@@ -1,6 +1,10 @@
 .blog
+  article
+    header
+      @extend .page-header
+
   aside
-    margin-top: 20px
+    margin-top: 42px
 
   .article-meta
     font-size: 14px
